--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 .holder{
 	display:flex;
-	flex-direction:row;
-	justify-content:space-evenly;
+	justify-content:center;
 	flex-wrap:wrap;
 }
 /* Your CSS Code here. */
